// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event.filter use case: evenNum event graph 1`] = `
"Graph {
  Seq [
    1. emit {{
       fullName: c
    }}
  ]
  Next [
    *  Graph {
       Seq [
         1. compute {{}},
         2. run {{}}
       ]
      [(empty list)]}
  ]}"
`;

exports[`event.filter use case: num event graph 1`] = `
"Graph {
  Seq [
    1. emit {{
       fullName: number
    }}
  ]
  Next [
    *  Graph {
       Seq [
         1. filter {{}}
       ]
       Next [
         *  Graph {
            Seq [
              1. emit {{
                 fullName: c
              }}
            ]
            Next [
              *  Graph {
                 Seq [
                   1. compute {{}},
                   2. run {{}}
                 ]
                [(empty list)]}
           ]}
      ]}
  ]}"
`;
